--- a/client/bower.json
+++ b/client/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-material": "~1.0.4",
-    "angular-sanitize": "^1.4.0"
+    "angular-sanitize": "^1.4.0",
+    "restangular": "^1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
